--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="container">
                 <h2 class="data-aos" data-aos="fade-up">About Anamitra</h2>
                 <p class="data-aos" data-aos="fade-up">
-                    <strong>Anamitra Chatterjee,</strong> Accredited Executive Coach & Faculty has had education and experience<br>
+                    <strong>Anamitra Chatterjee,</strong>XXXX Accredited Executive Coach & Faculty has had education and experience<br>
  of 25+ years in India & UK across Deutsche Bank and PwC, Hult Ashridge UK & IIMs in India.
                 </p>
                 <p class="data-aos" data-aos="fade-up">
