Update on 11 june,23

--- a/executive-coaching.html
+++ b/executive-coaching.html
@@ -103,6 +103,9 @@ client leads to a co-created relationship." <br /><br />
 		  Anamitra Chatterjee,</strong> Accredited Executive Coach (EMCC) holds a Master’s degree, MSc Masters in Executive<br> Coaching (AMEC) from Hult Ashridge Centre for Coaching (ACC), UK. <br><br>
 		
 		 Anamitra has 12+ years of Leadership Development &amp; Executive Coaching practice.<br><br>
+		
+		Anamitra Chatterjee, Accredited Executive Coach & Faculty has had education and experience<br>
+of 25+ years in India & UK across Deutsche Bank and PwC, Hult Ashridge UK & IIMs in India.<br><br>
 
        
         </p>
