--- a/index.html
+++ b/index.html
@@ -69,17 +69,15 @@
             <div class="container">
                 <h2 class="data-aos" data-aos="fade-up">About Anamitra</h2>
                 <p class="data-aos" data-aos="fade-up">
-                    <strong>Anamitra Chatterjee,</strong>Accredited Executive Coach & Faculty has had education and experience<br>
+                    <strong>Anamitra Chatterjee,</strong> Accredited Executive Coach & Faculty has had education and experience<br>
  of 25+ years in India & UK across Deutsche Bank and PwC, Hult Ashridge UK & IIMs in India.
                 </p>
                 <p class="data-aos" data-aos="fade-up">
-                    Anamitra Chatterjee has had diverse education and work experience of 25+ years in India & UK across
-                    Deutsche<br>
-                    Bank and PwC, Hult Ashridge UK and IIMs in India. He is an Accredited Executive Coach (EMCC). <br>
+                    Anamitra Chatterjee is an Accredited Executive Coach (EMCC).
                     He has 12+ years of independent practice in Leadership Development & Executive Coaching. He has coached over 230
-                    senior leaders<br>
+                    senior leaders
                     and 2600 hours. As Faculty, he designs and delivers executive education programmes on consulting
-                    skills, leadership<br> and team development. As Facilitator, he has delivered training to over 25 clients and 3500
+                    skills, organization & leadership development. He has delivered training to over 25 clients and 3500
                     managers.</p>
                 <div class="row">
                     <div class="col-md-7 data-aos" data-aos="fade-right">
