--- a/leadership.html
+++ b/leadership.html
@@ -94,6 +94,8 @@ Performance = Potential – (Internal) Interference. I encourage leaders to deve
 		He underwent the Leadership Development Program (LDP), Center for Creative Leadership (CCL) Brussels.<br>
 Anamitra has 12+ years of work experience in leadership development: INSEAD, Hult Ashridge UK & IIMs in India.<br><br>
 			
+		  Anamitra Chatterjee, Accredited Executive Coach & Faculty has had education and experience<br>
+of 25+ years in India & UK across Deutsche Bank and PwC, Hult Ashridge UK & IIMs in India.<br><br>
 		
 			
 			Anamitra underwent the World Class Mentoring (Elite Sports & Business) Programme from Ashtridge UK.
