--- a/executive-education.html
+++ b/executive-education.html
@@ -67,9 +67,11 @@
       <div class="container">
         <h2>Executive Education</h2>
         
-        <p><strong>Anamitra Chatterjee</strong> has had diverse education and work experience of 25+ years in India & UK across <br />
-          Deutsche Bank and PwC, Hult Ashridge UK and IIMs in India. As Faculty, he designs and delivers executive <br />
-          education programmes on consulting skills, leadership and team development. <br /> As Facilitator, he has delivered training to over 25 clients and 3500 managers. <br /><br />
+        Anamitra Chatterjee, Accredited Executive Coach & Faculty has had education and experience<br>
+of 25+ years in India & UK across Deutsche Bank and PwC, Hult Ashridge UK & IIMs in India.<br><br>
+		  
+		  As Faculty, he designs and delivers executive
+          education programmes on organization & leadership development. <br /> He has delivered training to over 25 clients and 3500 managers. <br /><br />
           Anamitra Chatterjee, Accredited Executive Coach (EMCC) holds a Master’s degree, MSc Masters in Executive <br />Coaching (AMEC) from Hult Ashridge Centre for Coaching (ACC), UK. <br /><br />
           He underwent the Leadership Development Program (LDP), Center for Creative Leadership (CCL) Brussels.<br />
           Anamitra has 12+ years of work experience in executive education: INSEAD, Hult Ashridge Executive Education UK & IIMs in India. 
