--- a/client-testimonial.html
+++ b/client-testimonial.html
@@ -103,6 +103,35 @@
 			  </div>
 			
 		</div>
+		
+		
+		<div class="row data-aos" data-aos="fade-up">
+		<div class="number-block" style="margin-top: 80px;">
+		<ul>
+			<li >
+				<span>230+ </span></br>
+			    senior leaders
+			</li>
+		<li>
+				<span>2600 </span></br>
+			    hours
+			</li>
+	<li>
+				<span>25+ </span></br>
+			    clients
+			</li>
+<li>
+				<span>3500</span></br>
+			    managers
+			</li>
+		</ul>
+		
+		
+		
+		</div>
+		
+		</div>
+		
 	</section>
 		
 		 <section class="testimonial-wrap" id="talk" >
