--- a/index.html
+++ b/index.html
@@ -204,6 +204,47 @@ Performance = Potential – (Internal) Interference.”</h2>
             </div>
         </div>
     </section>
+		
+<!--
+		<div class="mid-bottom-img1">
+          <img src="assets/img/strip.png" alt="">
+        </div>
+-->
+		
+		<div class="number-block">
+		<ul>
+			<li >
+				<span>230+ </span></br>
+			    senior leaders
+			</li>
+		<li>
+				<span>2600 </span></br>
+			    hours
+			</li>
+	<li>
+				<span>25+ </span></br>
+			    clients
+			</li>
+<li>
+				<span>3500</span></br>
+			    managers
+			</li>
+		</ul>
+		
+		
+		
+		</div>
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
 		 <section class="testimonial-wrap" id="talk" >
 			  <div class="container">
                 <h2 class="data-aos" data-aos="fade-up">Testimonials</h2>
