--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ Performance = Potential – (Internal) Interference.”</h2>
         </div>
 -->
 		
-		<div class="number-block">
+		<div class="number-block" style="margin-bottom: 50px;">
 		<ul>
 			<li >
 				<span>230+ </span></br>
