update on 16June,2023

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ Performance = Potential – (Internal) Interference.”</h2>
 			</li>
 		<li>
 				<span>2600 </span></br>
-			    hours
+			    coaching hours
 			</li>
 	<li>
 				<span>25+ </span></br>
