update leadership page

--- a/leadership.html
+++ b/leadership.html
@@ -101,7 +101,7 @@ of 25+ years in India & UK across Deutsche Bank and PwC, Hult Ashridge UK & IIMs
 			Anamitra underwent the World Class Mentoring (Elite Sports & Business) Programme from Ashtridge UK.
 			
 			
-
+<p><img src="assets/img/leadership-img1.jpg" class="img-fluid leader-img"></p> 
 
 			
       </p>
