--- a/leadership.html
+++ b/leadership.html
@@ -188,9 +188,9 @@ I offer LD through a hybrid-online mode.
 	  
   </main>
 	
-	<div class="exclusive-bottom-img" style="margin-left: 20%; margin-right: 20%;">
+	<!--<div class="exclusive-bottom-img" style="margin-left: 20%; margin-right: 20%;">
       <img src="assets/img/leadership-btm-img.jpg" alt="">
-    </div>
+    </div>-->
 	
 <section class="video-wrap">
            <div class="container">
