--- a/video-gallery.html
+++ b/video-gallery.html
@@ -73,14 +73,14 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8">
-            <div class="quote">
+            <!--<div class="quote">
               <p>
                 “In the midst of winter, I found there was, within me,<br> an invincible summer.”<br><br>
 
 
                 <b>– Albert Camus</b>
               </p>
-            </div>
+            </div>-->
           </div>
           
         </div>
