--- a/video-gallery.html
+++ b/video-gallery.html
@@ -31,7 +31,7 @@
       <div class="logo">
         <a href="index.html"><img src="assets/img/logo.png" alt="" /></a>
       </div>
-      <nav class="navigation">
+     <nav class="navigation">
         <a href="javascript:void(0)" class="close-menu"><i class="far fa-times-circle"></i></a>
         <ul>
                     <li class="current">
@@ -40,12 +40,12 @@
                             <li><a href="executive-coaching.html">Executive Coaching</a></li>
                             <li><a href="executive-education.html">Executive Education</a></li>
                             <li><a href="leadership.html">Leadership Development</a></li>
-							<li><a href="#notes"> 230 Leaders, 2600, 25, 3500</a></li>
+							<li><a href="organization-behaviour.html"> Organization Behaviour</a></li>
                         </ul>
                     </li>
                     <li><a href="myself.html">Anamitra</a></li>
-                    <li><a href="client-testimonial.html">Clients & Testimonials</a></li>
-                    <li><a href="#">Gallery</a>
+                    <li><a href="client-testimonial.html">Clients & Testimonials</a></li>                    
+                    <li><a href="video-gallery.html">Gallery</a>
 					<ul class="sub-menu">
                             <li><a href="gallery.html">Photos</a></li>
                             <li><a href="video-gallery.html">Videos</a></li>
