--- a/publications.html
+++ b/publications.html
@@ -115,7 +115,7 @@ Chatterjee, A (2018), What makes a good Leader.<br> In: Economics, Management an
                 </p>
           
           <div class="row">
-			  <div class="col-lg-2 col-md-6"></div>
+			 <div class="col-lg-2 col-md-6"></div>
             <div class="col-lg-8 col-md-6">
               <div class="gallery-box">
                 <!--<p>Lorem ipsum dolor sit amet,</p>-->
@@ -153,6 +153,14 @@ Chatterjee, A (2018), What makes a good Leader.<br> In: Economics, Management an
                 <a data-fancybox="gallery" title="" href="assets/img/book5.jpg"><img src="assets/img/book5.jpg" class="img-fluid" alt="" style="display:none"></a>
               </div>
             </div>
+			</div>
+			
+			
+			
+			 
+			
+			
+			
       </section>
 		
 		
