--- a/executive-education.html
+++ b/executive-education.html
@@ -47,7 +47,7 @@
         </nav>
          <ol>
                 <li><a href="assets/img/Anamitra Chatterjee CV1.pdf" target="_blank"><img src="assets/img/icon1.png" alt="" /> Bio CV</a></li>
-                <li><a href="index.html#video"><img src="assets/img/icon2.png" alt="" /> Profile Video</a></li>
+                <li style="margin:0 8px 0 0; "><a href="https://youtu.be/qVULcHNeX7c?si=dIB5-XDAWqKFh4lC" target="_blank"><img src="assets/img/icon2.png" alt="" /> Profile Video</a></li>
             </ol>
       <a href="javascript:void(0)" class="open-menu"><i class="fas fa-bars"></i></a>
 	<div>
@@ -265,7 +265,7 @@ of 25+ years in India & UK across Deutsche Bank and PwC, Hult Ashridge UK & IIMs
                     <li><a href="client-testimonial.html">Clients & Testimonials</a></li>                    
                     <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="assets/img/Anamitra Chatterjee CV1.pdf" target="_blank">Bio CV</a></li>
-                    <li><a href="index.html#video">Profile Video</a></li>
+                    <li><a href="https://youtu.be/qVULcHNeX7c?si=dIB5-XDAWqKFh4lC" target="_blank">Profile Video</a></li>
                 </ul>
                 <a href="javascript:void(0)" class="scroll-top">Back to Top <i class="fa-solid fa-angle-up"></i></a>
             </div>
