--- a/organization-behaviour.html
+++ b/organization-behaviour.html
@@ -59,7 +59,7 @@
         </nav>
          <ol>
                 <li><a href="assets/img/Anamitra Chatterjee CV1.pdf" target="_blank"><img src="assets/img/icon1.png" alt="" /> Bio CV</a></li>
-                <li><a href="#video"><img src="assets/img/icon2.png" alt="" /> Profile Video</a></li>
+                <li style="margin:0 8px 0 0; "><a href="https://youtu.be/qVULcHNeX7c?si=dIB5-XDAWqKFh4lC" target="_blank"><img src="assets/img/icon2.png" alt="" /> Profile Video</a></li>
             </ol>
       <a href="javascript:void(0)" class="open-menu"><i class="fas fa-bars"></i></a>
 		<div>
@@ -259,16 +259,16 @@ Coaching (AMEC) from Hult Ashridge Centre for Coaching (ACC), UK.<br /><br />
                 </div>
             </div>
         </div>
-        <div class="copyright">
+           <div class="copyright">
             <div class="container">
                 <p>Copyright by Anamitra Chatterjee. All rights reserved.</p>
                 <ul>
                     <li><a href="#">Services</a></li>
                     <li><a href="myself.html"> Anamitra </a></li>
-                    <li><a href="client-testimonial.html">Clients & Testimonials</a></li>
+                    <li><a href="client-testimonial.html">Clients & Testimonials</a></li>                    
                     <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="assets/img/Anamitra Chatterjee CV1.pdf" target="_blank">Bio CV</a></li>
-                    <li><a href="index.html#video">Profile Video</a></li>
+                    <li><a href="https://youtu.be/qVULcHNeX7c?si=dIB5-XDAWqKFh4lC" target="_blank">Profile Video</a></li>
                 </ul>
                 <a href="javascript:void(0)" class="scroll-top">Back to Top <i class="fa-solid fa-angle-up"></i></a>
             </div>
