--- a/video-gallery.html
+++ b/video-gallery.html
@@ -146,7 +146,7 @@
 			
 			<div class="row pad-video">	
 				
-				<div class="col-lg-6 col-md-6">
+				<div class="col-lg-6 col-md-6" id="vid">
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/qVULcHNeX7c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				 </div>
 				
