--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		 
   </header>
     <div class="banner">
-        <div class="owl-carousel owl-theme">
+        <div class="owl-carousel owl-theme" id="slider">
             <div class="item"><img src="assets/img/banner copy home1.jpg" alt="" /></div>
           <img src="assets/img/banner.jpg" alt="" />
 <!--            <div class="item"><img src="assets/img/banner2.jpg" alt="" /></div>-->
@@ -421,7 +421,8 @@ Vodacom International</small>
     <script src="assets/js/owl.carousel.min.js"></script>
     <script src="assets/js/jquery.fancybox.min.js"></script>
     <script src="assets/js/main.js"></script>
-	
+	<script>
+
 	<script>
 	$(document).ready(function() {
   var audio = $("#myAudio")[0]; // get the audio element
