--- a/gallery.html
+++ b/gallery.html
@@ -105,6 +105,36 @@
           <h2>Photo Gallery</h2>
           <img src="assets/img/divider.png" class="img-fluid" alt="">
            <div class="row">
+			   <div class="col-lg-3 col-md-6">
+              <div class="gallery-box">
+                <!--<p>Lorem ipsum dolor sit amet,</p>-->
+                <a data-fancybox="gallery" title="" href="assets/img/Asia-Business-img4.jpg"><img src="assets/img/Asia-Business-img4.jpg" class="img-fluid" alt=""></a>
+              </div>
+            </div>
+			   <div class="col-lg-3 col-md-6">
+              <div class="gallery-box">
+                <!--<p>Lorem ipsum dolor sit amet,</p>-->
+                <a data-fancybox="gallery" title="" href="assets/img/Asia-Business-img1.jpg"><img src="assets/img/Asia-Business-img1.jpg" class="img-fluid" alt=""></a>
+              </div>
+            </div>
+			   <div class="col-lg-3 col-md-6">
+              <div class="gallery-box">
+                <!--<p>Lorem ipsum dolor sit amet,</p>-->
+                <a data-fancybox="gallery" title="" href="assets/img/Asia-Business-img2.jpg"><img src="assets/img/Asia-Business-img2.jpg" class="img-fluid" alt=""></a>
+              </div>
+            </div>
+			   <div class="col-lg-3 col-md-6">
+              <div class="gallery-box">
+                <!--<p>Lorem ipsum dolor sit amet,</p>-->
+                <a data-fancybox="gallery" title="" href="assets/img/Asia-Business-img3.jpg"><img src="assets/img/Asia-Business-img3.jpg" class="img-fluid" alt=""></a>
+              </div>
+            </div>
+			   <div class="col-lg-3 col-md-6">
+              <div class="gallery-box">
+                <!--<p>Lorem ipsum dolor sit amet,</p>-->
+                <a data-fancybox="gallery" title="" href="assets/img/Asia-Business-img4.jpg"><img src="assets/img/Asia-Business-img4.jpg" class="img-fluid" alt=""></a>
+              </div>
+            </div>
 			   
 			   <div class="col-lg-3 col-md-6">
               <div class="gallery-box">
