--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="owl-carousel owl-theme" id="slider">
             <div class="item"><img src="assets/img/banner-h1.jpg" alt="" /></div>
           <img src="assets/img/banner.jpg" alt="" />
-<!--            <div class="item"><img src="assets/img/banner2.jpg" alt="" /></div>-->
+<div class="item"><img src="assets/img/banner2.jpg" alt="" /></div>
         </div>
     </div>
     <main class="main-wrapper">
