--- a/executive-education.html
+++ b/executive-education.html
@@ -21,13 +21,13 @@
       <nav class="navigation">
         <a href="javascript:void(0)" class="close-menu"><i class="far fa-times-circle"></i></a>
         <ul>
-                    <li class="current">
+                     <li class="current">
                         <a href="#">Services</a>
                         <ul class="sub-menu">
                             <li><a href="executive-coaching.html">Executive Coaching</a></li>
-                            <li><a href="executive-education.html">Executive Education</a></li>
-                            <li><a href="leadership.html">Leadership Development</a></li>
-							<li><a href="organization-behaviour.html"> Organization Behaviour</a></li>
+                            <li><a href="executive-education.html">Executive Education</a></li>                            
+							<li><a href="organization-behaviour.html"> Organization 0B HRM OD</a></li>
+							<li><a href="leadership.html">Leadership Development</a></li>
                         </ul>
                     </li>
                     <li><a href="myself.html">Anamitra</a></li>
@@ -204,13 +204,13 @@ of 25+ years in India & UK across Deutsche Bank and PwC, Hult Ashridge UK & IIMs
               <div class="row video-box">
 					    <div class="col-md-6">
 						   <div class="video-container"> 
-					   <iframe width="560" height="315" src="https://www.youtube.com/embed/MBsjaTnDAG4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					  <iframe width="560" height="315" src="https://www.youtube.com/embed/ii1o232Q6x4?si=h79Ujx7GcwbLAUyP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 						   </div>
 					   </div>
 					   
 					   <div class="col-md-6">
 						<div class="video-container">   
-					   <iframe width="560" height="315" src="https://www.youtube.com/embed/XKEL45grXqk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+					   <iframe width="560" height="315" src="https://www.youtube.com/embed/11xZdu9UoKM?si=I6kFaLRYdoTWZbCb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 						</div>
 					   </div>
 					   
