--- a/organization-behaviour.html
+++ b/organization-behaviour.html
@@ -34,13 +34,13 @@
       <nav class="navigation">
         <a href="javascript:void(0)" class="close-menu"><i class="far fa-times-circle"></i></a>
         <ul>
-                    <li class="current">
+                     <li class="current">
                         <a href="#">Services</a>
                         <ul class="sub-menu">
                             <li><a href="executive-coaching.html">Executive Coaching</a></li>
-                            <li><a href="executive-education.html">Executive Education</a></li>
-                            <li><a href="leadership.html">Leadership Development</a></li>
-							<li><a href="organization-behaviour.html"> Organization Behaviour</a></li>
+                            <li><a href="executive-education.html">Executive Education</a></li>                            
+							<li><a href="organization-behaviour.html"> Organization 0B HRM OD</a></li>
+							<li><a href="leadership.html">Leadership Development</a></li>
                         </ul>
                     </li>
                     <li><a href="myself.html">Anamitra</a></li>
@@ -101,7 +101,7 @@
 	  
 	  <section class="video-wrap">
            <div class="container">
-		  <h2>Organization Behaviour</h2>
+		  <h2>Organization 0B HRM OD</h2>
 			   
 			   Anamitra Chatterjee has had diverse education and work experience of 25+ years in India & UK across<br>
 Deutsche Bank and PwC, Hult Ashridge UK and IIMs in India. As Faculty, he designs and delivers executive
