--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                         <a href="#">Services</a>
                         <ul class="sub-menu">
                             <li><a href="executive-coaching.html">Executive Coaching</a></li>
-                            <li><a href="executive-education.html">Executive Education</a></li>
-                            <li><a href="leadership.html">Leadership Development</a></li>
-							<li><a href="organization-behaviour.html"> Organization Behaviour</a></li>
+                            <li><a href="executive-education.html">Executive Education</a></li>                            
+							<li><a href="organization-behaviour.html"> Organization 0B HRM OD</a></li>
+							<li><a href="leadership.html">Leadership Development</a></li>
                         </ul>
                     </li>
                     <li><a href="myself.html">Anamitra</a></li>
