--- a/myself.html
+++ b/myself.html
@@ -34,13 +34,13 @@
       <nav class="navigation">
         <a href="javascript:void(0)" class="close-menu"><i class="far fa-times-circle"></i></a>
         <ul>
-                    <li class="current">
+                     <li class="current">
                         <a href="#">Services</a>
                         <ul class="sub-menu">
                             <li><a href="executive-coaching.html">Executive Coaching</a></li>
-                            <li><a href="executive-education.html">Executive Education</a></li>
-                            <li><a href="leadership.html">Leadership Development</a></li>
-							<li><a href="organization-behaviour.html"> Organization Behaviour</a></li>
+                            <li><a href="executive-education.html">Executive Education</a></li>                            
+							<li><a href="organization-behaviour.html"> Organization 0B HRM OD</a></li>
+							<li><a href="leadership.html">Leadership Development</a></li>
                         </ul>
                     </li>
                     <li><a href="myself.html">Anamitra</a></li>
