--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                         <ul class="sub-menu">
                             <li><a href="executive-coaching.html">Executive Coaching</a></li>
                             <li><a href="executive-education.html">Executive Education</a></li>                            
-							<li><a href="organization-behaviour.html"> Organization 0B HRM OD</a></li>
+							<li><a href="organization-behaviour.html"> Organization OB HRM OD</a></li>
 							<li><a href="leadership.html">Leadership Development</a></li>
                         </ul>
                     </li>
                     <li><a href="myself.html">Anamitra</a></li>
                     <li><a href="client-testimonial.html">Clients & Testimonials</a></li>                    
-                    <li><a href="video-gallery.html">Gallery</a>
+                    <li><a href="#">Gallery</a>
 					<ul class="sub-menu">
                             <li><a href="gallery.html">Photos</a></li>
                             <li><a href="video-gallery.html">Videos</a></li>
