--- a/organization-behaviour.html
+++ b/organization-behaviour.html
@@ -39,13 +39,13 @@
                         <ul class="sub-menu">
                             <li><a href="executive-coaching.html">Executive Coaching</a></li>
                             <li><a href="executive-education.html">Executive Education</a></li>                            
-							<li><a href="organization-behaviour.html"> Organization 0B HRM OD</a></li>
+							<li><a href="organization-behaviour.html"> Organization OB HRM OD</a></li>
 							<li><a href="leadership.html">Leadership Development</a></li>
                         </ul>
                     </li>
                     <li><a href="myself.html">Anamitra</a></li>
                     <li><a href="client-testimonial.html">Clients & Testimonials</a></li>                    
-                    <li><a href="video-gallery.html">Gallery</a>
+                    <li><a href="#">Gallery</a>
 					<ul class="sub-menu">
                             <li><a href="gallery.html">Photos</a></li>
                             <li><a href="video-gallery.html">Videos</a></li>
@@ -101,7 +101,7 @@
 	  
 	  <section class="video-wrap">
            <div class="container">
-		  <h2>Organization 0B HRM OD</h2>
+		  <h2>Organization OB HRM OD</h2>
 			   
 			   Anamitra Chatterjee has had diverse education and work experience of 25+ years in India & UK across<br>
 Deutsche Bank and PwC, Hult Ashridge UK and IIMs in India. As Faculty, he designs and delivers executive
