--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                     <li class="current">
                         <a href="#">Services</a>
                         <ul class="sub-menu">
-                            <li><a href="executive-coaching.html">Executive Coaching</a></li>
-                            <li><a href="executive-education.html">Executive Education</a></li>                            
-							<li><a href="organization-behaviour.html"> Organization OB HRM OD</a></li>
-							<li><a href="leadership.html">Leadership Development</a></li>
+                            <li><a href="executive-coaching.html"><span style="font-weight: bold">Executive Coaching</span ></a></li>
+                            <li><a href="executive-education.html"><span style="font-weight: bold">Executive Education</span ></a></li>                            
+							<li><a href="organization-behaviour.html"><span style="font-weight: bold">Organization OB HRM OD</span ></a></li>
+							<li><a href="leadership.html"><span style="font-weight: bold">Leadership Development</span ></a></li>
                         </ul>
                     </li>
                     <li><a href="myself.html">Anamitra</a></li>
