--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
   </header>
     <div class="banner">
         <div class="owl-carousel owl-theme" id="slider">
-			 <div class="item"><img src="assets/img/slider-Jan24.jpg" alt="" /></div>
-            <div class="item"><img src="assets/img/banner-h1.jpg" alt="" /></div>
+			 <div class="item"><img src="assets/img/slider-Jan24.jpg" alt="" /></div>			
+        <!-- <div class="item"><img src="assets/img/banner-h1.jpg" alt="" /></div>-->
 			<div class="item"><img src="assets/img/banner.jpg" alt="" /></div>
 <div class="item"><img src="assets/img/banner2.jpg" alt="" /></div>
         </div>
@@ -87,18 +87,18 @@
                                 Coaching</li>
                             <li>Hult Ashridge Executive Education UK, since 2013<br> Adjunct Faculty: 2013-2015. Astridge Education Coach 
                                 </li>
-                            <li>IIM Kozhikode, V. Faculty (OB & HR) since 2016. Adjunct Faculty since 2022 <br>
-							IIM Kashipur, V. Faculty (Consulting Skills, Strategic Management): 2012-18<br>
-							IIM Calcutta, V. Faculty (Executive Education), LDP & MBA/PGPEx since 2013<br>
-                            XIM Bhubaneswar, V. Faculty (Negotiation & Communication) SGPA: 2022</li>
+                            <li>IIM Kozhikode, Adjunct Faculty (OB & HRM), since 2016 <br>
+							IIM Kashipur, V. Faculty (Consulting Skills) 2012-18 <br>
+							IIM Calcutta, V. Faculty (Executive Education) since 2013 <br>
+							</li>
 							
 							
-                            <li>Heidrick Consulting, Empaneled Associate since 2020 <br> Leadership Consultant.
+                            <li>Heidrick Leadership Consulting, Affliate, since 2020 <br> Leadership Consultant.
                                 Executive Coach & Facilitator</li>
                             <li>Eruditus Executive Education, India: 2011-12<br> Director-Executive Coaching ILPSE
                                 INSEAD Singapore </li>
                             <li>PricewaterhouseCoopers (PwC) India: 2003-08<br> Head-HR, Learning & Development (L&D) &
-                                PwC Global L&E</li>
+                                PwC Global L&D</li>
                             <li>Deutsche Bank AG: 1996-2000<br> Banking Operations & Relationship Manager</li>
                         </ul>
                     </div>
