--- a/myself.html
+++ b/myself.html
@@ -212,6 +212,8 @@
             <div class="txt-block">
              <div class="publication"><h3>Publications: Book Chapter</h3></div>
               <ul>
+				  <li>Mukherjee, R & Chatterjee, A (2023), Entrepreneurship in the New Normal with Solopreneurs<br>
+&nbsp; &nbsp; &nbsp;embracing the Gig-Mindset. In: Entrepreneurship, Development in the New Normal. New Delhi: Kunal, pp. 72-83.</li>
                 <li class="publication">
                     Chatterjee, A (2018), What makes a good Leader. In: Economics, Management and Sustainability.<br> 
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Singapore: Springer, pp. 277-279.<a href="publications.html">Read</a>
