--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </header>
     <div class="banner">
         <div class="owl-carousel owl-theme" id="slider">
-			 <div class="item"><img src="assets/img/slider-Jan24.jpg" alt="" /></div>			
+			 <div class="item"><img src="assets/img/slider-Jan24-new.jpg" alt="" /></div>			
         <!-- <div class="item"><img src="assets/img/banner-h1.jpg" alt="" /></div>-->
 			<div class="item"><img src="assets/img/banner.jpg" alt="" /></div>
 <div class="item"><img src="assets/img/banner2.jpg" alt="" /></div>
