--- a/executive-education.html
+++ b/executive-education.html
@@ -46,7 +46,7 @@
 					
         </nav>
          <ol>
-               <li><a href="assets/img/Anamitra Chatterjee-Bio-jan24.pdf" target="_blank"><img src="assets/img/icon1.png" alt="" /> Bio CV</a></li>
+               <li><a href="assets/img/AnamitraChatterjee-Bio-13Feb.pdf" target="_blank"><img src="assets/img/icon1.png" alt="" /> Bio CV</a></li>
                 <li style="margin:0 8px 0 0; "><a href="https://youtu.be/qVULcHNeX7c?si=dIB5-XDAWqKFh4lC" target="_blank"><img src="assets/img/icon2.png" alt="" /> Profile Video</a></li>
             </ol>
       <a href="javascript:void(0)" class="open-menu"><i class="fas fa-bars"></i></a>
@@ -264,7 +264,7 @@ of 25+ years in India & UK across Deutsche Bank and PwC, Hult Ashridge UK & IIMs
                     <li><a href="myself.html"> Anamitra </a></li>
                     <li><a href="client-testimonial.html">Clients & Testimonials</a></li>                    
                     <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="assets/img/Anamitra Chatterjee-Bio-jan24.pdf" target="_blank">Bio CV</a></li>
+                    <li><a href="assets/img/AnamitraChatterjee-Bio-13Feb.pdf" target="_blank">Bio CV</a></li>
                     <li><a href="https://youtu.be/qVULcHNeX7c?si=dIB5-XDAWqKFh4lC" target="_blank">Profile Video</a></li>
                 </ul>
                 <a href="javascript:void(0)" class="scroll-top">Back to Top <i class="fa-solid fa-angle-up"></i></a>
