--- a/video-gallery.html
+++ b/video-gallery.html
@@ -43,7 +43,7 @@
                 </ul>
         </nav>
          <ol>
-                <li><a href="assets/img/Anamitra Chatterjee-Bio-jan24.pdf" target="_blank"><img src="assets/img/icon1.png" alt="" /> Bio CV</a></li>
+                <li><a href="assets/img/AnamitraChatterjee-Bio-13Feb.pdf" target="_blank"><img src="assets/img/icon1.png" alt="" /> Bio CV</a></li>
                 <li style="margin:0 8px 0 0; "><a href="#video"><img src="assets/img/icon2.png" alt="" /> Profile Video</a></li>
             </ol>
       <a href="javascript:void(0)" class="open-menu"><i class="fas fa-bars"></i></a>
@@ -247,7 +247,7 @@
                     <li><a href="myself.html"> Anamitra </a></li>
                     <li><a href="client-testimonial.html">Clients & Testimonials</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
-                   <li><a href="assets/img/Anamitra Chatterjee-Bio-jan24.pdf" target="_blank">Bio CV</a></li>
+                   <li><a href="assets/img/AnamitraChatterjee-Bio-13Feb.pdf" target="_blank">Bio CV</a></li>
                     <li><a href="index.html#video">Profile Video</a></li>
                 </ul>
                 <a href="javascript:void(0)" class="scroll-top">Back to Top <i class="fa-solid fa-angle-up"></i></a>
