update CV & homepage

--- a/index.html
+++ b/index.html
@@ -347,13 +347,13 @@ Vodacom International</small>
                     <div class="item"><img src="assets/img/Hult.png" alt="" /></div>                    
                     <div class="item"><img src="assets/img/Indian institute.png" alt="" /></div>
 					<div class="item"><img src="assets/img/Eruditus.png" alt="" /></div>
-					<div class="item"><img src="assets/img/xim-university-logo.png" alt="" /></div>
+					<div class="item"><img src="assets/img/iim-calcutta-h.jpg" alt="" /></div>
 					<div class="item"><img src="assets/img/IIM-Kashipur.png" alt="" /></div>
 					
 					<div class="item"><img src="assets/img/Pepsico.png" alt="" /></div>
 					<div class="item"><img src="assets/img/niit-logo.png" alt="" /></div>
 					<div class="item"><img src="assets/img/Diageo.png" alt="" /></div>
-					<div class="item"><img src="assets/img/mallcom.png" alt="" /></div>
+					<div class="item"><img src="assets/img/Simemens-h.jpg" alt="" /></div>
 					<div class="item"><img src="assets/img/Heidrick.png" alt="" /></div>
 					
                     <div class="item"><img src="assets/img/Indian-oil.png" alt="" /></div>
