--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ Vodacom International</small>
 					<div class="item"><img src="assets/img/Heidrick.png" alt="" /></div>
 					
                     <div class="item"><img src="assets/img/Indian-oil.png" alt="" /></div>
-					<div class="item"><img src="assets/img/kalingasoft.png" alt="" /></div>
+					<div class="item"><img src="assets/img/h-Lab-vantage.jpg" alt="" /></div>
 					<div class="item"><img src="assets/img/Metso_ Outotec.png" alt="" /></div>
                     <div class="item"><img src="assets/img/DNA.png" alt="" /></div>
                     <div class="item"><img src="assets/img/Insead.png" alt="" /></div>
