myself page  update

--- a/myself.html
+++ b/myself.html
@@ -105,7 +105,8 @@
                   <p>Mobile: +91 98302 81331</p>
                   <p>Website: www.anamitrachatterjee.com</p>
                   <p>Alternate Email: anamitra.chatterjee@ashridge.hult.edu</p>
-				  <p><a href="https://www.linkedin.com/in/anamitra-chatterjee/">LinkedIn: https://www.linkedin.com/in/anamitra-chatterjee/</a></p>	
+				  <p><a href="https://www.linkedin.com/in/anamitra-chatterjee/">LinkedIn: https://www.linkedin.com/in/anamitra-chatterjee/</a></p>				
+				  <p><a href="https://www.youtube.com/@AnamitraChatterjee">Youtube: https://www.youtube.com/@AnamitraChatterjee</a></p>
                 </div>
               </div>
             </div>
