--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         </ul>
                     </div>
                     <div class="col-md-5 data-aos" data-aos="fade-left">
-                        <img src="assets/img/about-img.jpg" class="img-fluid" alt="" />
+                        <img src="assets/img/about-img-2024-mar.jpg" class="img-fluid" alt="" />
                     </div>
                 </div>
             </div>
