--- a/executive-education.html
+++ b/executive-education.html
@@ -126,7 +126,7 @@ of 25+ years in India & UK across Deutsche Bank and PwC, Hult Ashridge UK & IIMs
 			<li>Indian Institute of Management (IIM) Kozhikode, <span class="nor-txt">V. Faculty since 2016</span> <br />
 				 <strong>Courses Taught:</strong>
 					<p>
-					 1.   Feedback & Coaching. High Performance, OB & HR. MDP for FCI: 2023 & Indian Oil<br />
+					 1.   Feedback & Coaching. High Performance, OB & HR. MDP for Indian Oil: 2023 <br />
 					 2. e-MDP for Strategic Human Resource Management (SHRM): 2022, 2023<br />
                      3. Leadership, OB & HR. MDP for Indian Railways IRPS: 2019, 2020<br />
                      4. OB & HR. Consulting Skills for EPGP: 2016, 2017<br />
