--- a/myself.html
+++ b/myself.html
@@ -91,6 +91,28 @@
       </div>
     </div>
     <main class="main-wrapper">
+		
+		<section class="about-wrap">
+            <div class="container">
+                
+                <p class="data-aos" data-aos="fade-up">
+                    <strong>Anamitra Chatterjee,</strong> Accredited Executive Coach & Faculty has had education and experience<br>
+ of 25+ years in India & UK across Deutsche Bank and PwC, Hult Ashridge UK & IIMs in India.
+                </p>
+                <p class="data-aos" data-aos="fade-up">
+                    Anamitra Chatterjee is an Accredited Executive Coach (EMCC).
+                    He has 12+ years of independent practice in Leadership Development & Executive Coaching. He has coached over 230
+                    senior leaders
+                    and 2600 hours. As Faculty, he designs and delivers executive education programmes on consulting
+                    skills, organization & leadership development. He has delivered training to over 25 clients and 4000
+                    managers.</p>
+               
+            </div>
+        </section>
+		
+		
+		
+		
       <section class="anamitra-body-content">
         <div class="container">
           <div class="row">
