--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ Performance = Potential – (Internal) Interference.”</h2>
                 </div>
                 <div class="col-md-5 data-aos" data-aos="fade-left">
                     <h2>Anamitra Chatterjee</h2>
-                    <p><strong>He</strong> lives in Calcutta, India with his family and has a keen interest in travelling to mountains.</p>
+                    <p><strong>He</strong> lives in Calcutta, India with his family and he has a passion for travelling to mountains.</p>
                     <a href="myself.html">More</a>
                 </div>
             </div>
