--- a/myself14-old.html
+++ b/myself14-old.html
@@ -108,11 +108,11 @@
                     managers.</p>
 				
 				 <p class="data-aos" data-aos="fade-up"><strong>Anamitra Chatterjee,</strong> holds two post-graduate qualifications: PGDM (MBA)
-                        from Indian Institute of Management (IIM) Calcutta & <br>PGD from London School of Economics
+                        from Indian Institute of Management (IIM) Calcutta & PGD from London School of Economics
                         & Political Science (LSE) and a Master's degree, MSc Masters in Executive Coaching
-                        (AMEC) from <br>Hult Ashridge UK. He studied on a British Chevening scholarship at LSE,
-                        UK. He got a Distinction in BSc - Economics from Presidency College. <br><br>He is a certified practitioner of psychometrics:  Hogan & LVI360, Belbin, FIRO-B &
-                        MBTI.<br> Anamitra underwent the World Class Mentoring (Elite Sports & Business) Programme from Ashtridge UK.</p>
+                        (AMEC) from Hult Ashridge UK. He studied on a British Chevening scholarshipat LSE,
+                        UK. He got a Distinction in BSc - Economics (Hons) from Presidency College. <br>He is a certified practitioner of psychometrics:  Hogan & LVI360, Belbin, FIRO-B &
+                        MBTI. Anamitra underwent the <br>World Class Mentoring (Elite Sports & Business) Programme from Ashtridge UK.</p>
                
             </div>
         </section>
