--- a/executive-education.html
+++ b/executive-education.html
@@ -98,10 +98,10 @@ of 25+ years in India & UK across Deutsche Bank and PwC, Hult Ashridge UK & IIMs
               <li>Indian Institute of Management (IIM) Kozhikode: <span class="nor-txt">Adjunct Faculty since 2022</span><br />
                 <strong>Courses Taught:</strong>
 				  <p>
-				  1. Organisation Behaviour (OB-II) for EPGP<br/>
+				  1. Organisation Behaviour (OB-II)<br/>
                     &nbsp;&nbsp; 1.5 Credit. 15 hours. Courseware & Evaluation: 2023, 2024<br/>
 					  
-			      2. Organisation Behaviour (OB I) for EPGP11,
+			      2. Organisation Behaviour (OB I)
 					  <br> &nbsp;&nbsp;  1.5 Credit. 15 hours. Courseware & Evaluation: 2024<br/>
                   
 					  3. Organisation Development & Change (OD&C)
