--- a/myself.html
+++ b/myself.html
@@ -203,12 +203,12 @@
                    
                 </li>
                 <li>
-                    Achievers of Asia & Africa’ Featured in Asian-African Chamber of <br>
-                    &nbsp; &nbsp; &nbsp;Commerce & Industry: 2024  
+                     British Chevening scholarship during PG at London School of <br>
+					 &nbsp; &nbsp; &nbsp;Economics (LSE), UK: 2000-2001 
                 </li>
 				  <li>
-				British Chevening scholarship during PG at London School <br>
-                &nbsp; &nbsp; &nbsp;of Economics (LSE), UK: 2000-2001
+				     Distinction: First Class First, BSc Economics (Hons) Part-I,  <br> 
+				     &nbsp; &nbsp; &nbsp;Presidency College Calcutta Univ: 1988
 				</li>
               
               </ul>
@@ -282,7 +282,7 @@
 	  
    <div class="footer-top">
         <div class="bottom-img-part" style="margin-bottom: 0">
-            <img src="assets/img/myself-img2.jpg" alt="">
+            <img src="assets/img/myself-btm-ban.jpg" alt="">
         </div>
     </div>
 	  <section style="border-bottom:1px solid #99d3d2; background-color: azure; padding:50px 0;   ">
