--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
     <div class="banner">
         <div class="owl-carousel owl-theme" id="slider">
 			 <!-- <div class="item"><img src="assets/img/slider-Jan24-new.jpg" alt="" /></div>-->			
-        <div class="item"><img src="assets/img/banner-home2.jpg" alt="" /></div>
+        	<div class="item"><img src="assets/img/banner-home2.jpg" alt="" /></div>
 			<div class="item"><img src="assets/img/banner.jpg" alt="" /></div>
-<div class="item"><img src="assets/img/banner2.jpg" alt="" /></div>
+			<div class="item"><img src="assets/img/banner2.jpg" alt="" /></div>
+			<div class="item"><img src="assets/img/slider-Organization-OB.jpg" alt="" /></div>
+		<div class="item"><img src="assets/img/slider-Executive-Coaching.jpg" alt="" /></div>	
         </div>
     </div>
     <main class="main-wrapper">
