--- a/client-testimonial.html
+++ b/client-testimonial.html
@@ -135,7 +135,7 @@
 		
 		 <section class="testimonial-wrap" id="talk" >
 			  <div class="container">
-                <h2 class="data-aos" data-aos="fade-up">Testimonials test</h2>
+                <h2 class="data-aos" data-aos="fade-up">Testimonials</h2>
 
                 <p>“I credit Anamitra for starting my own coaching and transformation journey. Many years back I experienced executive coaching for the first<br>
 					time with Anamitra as my Executive Coach. It started a journey of over a decade where I not only grew professionally and personally but<br> importantly started my own coaching journey which has been profoundly fulfilling. I wish joy and growth to his coachees.”<br /><br />
