--- a/myself.html
+++ b/myself.html
@@ -70,9 +70,10 @@
 		
     </div>
   </header>
-    <div class="banner-wrap myself-ban">
+	  
+   <!-- <div class="banner-wrap myself-ban">
       <div class="container">
-<!--
+
         <div class="row">
           <div class="col-lg-8">
             <div class="quote">
@@ -86,9 +87,29 @@
           </div>
           
         </div>
--->
+
       </div>
-    </div>
+	  </div>-->
+		
+	<div class="banner-wrap leadership-banner-wrap">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8">
+            <div class="quote">              
+                &nbsp;				
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="img-ban">
+             
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>	
+		
+		
+		
     <main class="main-wrapper">
 		
 		<section class="about-wrap">
