--- a/leadership.html
+++ b/leadership.html
@@ -57,7 +57,7 @@
     </div>
   </header>
 
-	<div class="banner-wrap leadership-banner-wrap">
+	<!--<div class="banner-wrap leadership-banner-wrap">
       <div class="container">
         <div class="row">
           <div class="col-lg-8">
@@ -72,7 +72,31 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>-->
+	
+	<div class="banner-wrap myself-ban">
+      <div class="container">
+
+        <div class="row">
+          <div class="col-lg-8">
+           <!-- <div class="quote">
+              <p>
+                “I use my training, accreditation and<br> experience to connect with
+                leaders on the<br> warmth-competency bridge.'' <br /><br />
+
+                <b> – Anamitra Chatterjee</b>
+              </p>
+            </div>-->
+          </div>
+          
+        </div>
+
+      </div>
+	  </div>
+	
+	
+	
+	
 	
 	
   <main class="main-wrapper">
