--- a/executive-coaching.html
+++ b/executive-coaching.html
@@ -168,7 +168,7 @@ Hogan &amp; LVI360, Belbin, FIRO-B &amp; MBTI.
     </div>
     <div class="ex-include">
       <div class="container">
-        <h3>Executive Coaching experiences include</h3>
+        <h3>Executive Coaching experiences:</h3>
         <ul>
 			
 			<li>CEO (PhD), of a New Delhi social research Co. in <br/> ‘leadership mind-set change’</li>
