--- a/executive-education.html
+++ b/executive-education.html
@@ -165,7 +165,7 @@ of 25+ years in India & UK across Deutsche Bank and PwC, Hult Ashridge UK & IIMs
 	
     <div class="ex-include">
       <div class="container">
-        <h3>Executive Education & Teaching Interest areas include</h3>
+        <h3>Executive Education & Teaching Interest areas:</h3>
         <ul>
           <li>Leadership Development (LD) & Executive Coaching (EC)</li>
           <li> Organisation Behaviour (OB) & Human Resource  Management (HRM)</li>
