--- a/executive-coaching.html
+++ b/executive-coaching.html
@@ -139,9 +139,17 @@ of 25+ years in India & UK across Deutsche Bank and PwC, Hult Ashridge UK & IIMs
 			frequency and duration of EC sessions are agreed with the client. I do offer flexibility within an agreed range. 
 
       </p>
+	  
+	  <div class="exclusive-bottom-img" >
+         <div ><img src="assets/img/executive-img2.jpg" alt=""></div> 
+        </div>
+	  
+	  
+<!--
 		   <div class="mid-bottom-img">
           <img src="assets/img/coaching-bottom-img.jpg" alt="">
         </div>
+-->
 	<p class="top-space">An executive coaching (EC) engagement for Directors and CXOs
 		is tailored for the development needs of individuals and teams.<br> A typical EC 
 engagement is covered in 6-8 EC sessions, of 60-90 mins each including an impactful mindful hour! 
@@ -169,16 +177,15 @@ Hogan &amp; LVI360, Belbin, FIRO-B &amp; MBTI.
     <div class="ex-include">
       <div class="container">
         <h3>Executive Coaching experiences:</h3>
+		  <div style="margin: 0 0 0 90px;">
         <ul>
 			
 			<li>CEO (PhD), of a New Delhi social research Co. in <br/> ‘leadership mind-set change’</li>
 			
 		    <li>MD (MBA), of India’s largest steel service Co. in </br/>‘CXO development &amp; top team alignment’</li>
 			
-			
           <li>Country Head (MBA), at Bangalore of a Global<br> Oil & Gas MNC in ‘executive transition’ </li>
-		
-						<li>VP & Head-HR (MBA), of a French R&D Org in <br/>‘organisation behaviour &amp; transformation’</li>
+		 <li>VP & Head-HR (MBA), of a French R&D Org in <br/>‘organisation behaviour &amp; transformation’</li>
 
 			
 			
@@ -188,7 +195,7 @@ Hogan &amp; LVI360, Belbin, FIRO-B &amp; MBTI.
           <li>CHRO/CPO (MHRM), of a USA/Indian tech Co. in <br/>‘CXO / organization development &amp; change’</li>
 		
 
-				<li>Sr. Director (Engineer), of a Chicago tech-digital firm in <br/>‘behaviour & people connect’</li>
+		<li>Sr. Director (Engineer), of a Chicago tech-digital firm in <br/>‘behaviour & people connect’</li>
 			
 			
           <li>Director (MBA), of a cola major in Calcutta to <br/>‘transition into a business P&L role’</li>
@@ -202,10 +209,12 @@ Hogan &amp; LVI360, Belbin, FIRO-B &amp; MBTI.
           <li> Partner (CA), at Calcutta of a Big4 Audit Firm in <br/>‘getting unstuck & leadership coaching’</li>
 		
         </ul>
-
+</div>
+<!--
         <div class="exclusive-bottom-img" >
          <div ><img src="assets/img/executive-img2.jpg" alt=""></div> 
         </div>
+-->
       </div>
     </div>
 	  
