--- a/executive-education.html
+++ b/executive-education.html
@@ -81,7 +81,7 @@ of 25+ years in India & UK across Deutsche Bank and PwC, Hult Ashridge UK & IIMs
 	
     <div class="awep-wrap">
       <div class="container">
-        <h2>Academic Work Experience & Positions</h2>
+        <h2>Academic Work Experience & Positions:</h2>
         <div class="row">
          <div class="col-md-7">
             <ul class="education-txt">
