--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
             </div>
         </section>
         <section class="service-wrap" id="notes">
-            <h2 class="data-aos" data-aos="fade-right">“My leadership development and executive coaching<br>
+          <!--  <h2 class="data-aos" data-aos="fade-right">“My leadership development and executive coaching<br>
  practice is informed by my own belief in<br>
-Performance = Potential – (Internal) Interference.”</h2>
+Performance = Potential – (Internal) Interference.”</h2> -->
             <img src="assets/img/service-img.jpg" class="img-fluid" alt="" />
             <div class="service-option">
                 <div class="container">
@@ -140,18 +140,19 @@ Performance = Potential – (Internal) Interference.”</h2>
                             </a>
                         </div>
 -->
-                        <div class="col-lg-3 col-md-6 data-aos" data-aos="fade-up">
-                            <a href="leadership.html" class="service-box">
-                                <img src="assets/img/icon6.png" alt="" />
-                                <h3>Leadership <strong>Development</strong></h3>
-                            </a>
-                        </div>
 						<div class="col-lg-3 col-md-6 data-aos" data-aos="fade-up">
                             <a href="organization-behaviour.html" class="service-box">
                                 <img src="assets/img/icon10.png" alt="" />
                                 <h3>Organization <strong> Behaviour</strong></h3>
                             </a>
                         </div>
+                        <div class="col-lg-3 col-md-6 data-aos" data-aos="fade-up">
+                            <a href="leadership.html" class="service-box">
+                                <img src="assets/img/icon6.png" alt="" />
+                                <h3>Leadership <strong>Development</strong></h3>
+                            </a>
+                        </div>
+						
                     </div>
                 </div>
             </div>
