--- a/client-testimonial.html
+++ b/client-testimonial.html
@@ -60,7 +60,8 @@
     <main class="main-wrapper">
     <section class="client-logo-wrap">
 		<div class="container">
-             <h2 class="data-aos" data-aos="fade-up">Clients</h2>
+             <h2 >Clients</h2>
+			
 			 <div class="row">
 				<div class="col-md-1">&nbsp;</div>
 				 <div class="col-md-2"><img src="assets/img/client/C-Tata.png" alt=""/></div>
