--- a/video-gallery.html
+++ b/video-gallery.html
@@ -77,7 +77,7 @@
     <main class="main-wrapper">
       <section class="gallery-wrap">
         <div class="container">
-          <h2>Video Galley</h2>
+          <h2>Video Gallery</h2>
           <img src="assets/img/divider.png" class="img-fluid" alt="">
 			
 			<div class="row pad-video">				
