--- a/publications.html
+++ b/publications.html
@@ -81,7 +81,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-5">
-            <div class="quote">
+            <!--<div class="quote">
               <p>
                 “I slept and dreamt that life was joy. <br>
  I awoke and saw that life was service.<br> 
@@ -90,7 +90,7 @@
 
                 <b>– Rabindranath Tagore</b>
               </p>
-            </div>
+            </div>-->
           </div>
           <div class="col-lg-4">
             <div class="img-ban">
